CHANGES
=======

* First support for 0.8.1 Jupyterhub
* Manage None state at startup
* Documentation in progress..
* Coroutine now work like a charm
* Start working on non-blocking version.(coroutine)
* Introducing statsd options to graph error and spawn delay
* Userdata template was now an option
* Fixes respawn of notebooks after kill -9 on jhub
* Cleaning some comment
* Start working with autodoc and pbr

1.1a1
-----

* Starting with pbr
* Unittest coverage ~ 5% shame!
* Better, faster, stronger..
* Refactored version OK, but without spring cleanup
* Refactoring and PEP8 compliance
* Added test config-file to gitignore
* Conda support, if user has conda envs kernel was added to notebooks
* Correction on state management
* Add a select form to permit image choice
* Now we can use public instance IP
* Bug fix after class rename
* Continue cleaning
* Cleaning Eclipse files and co
* Correction on classname
* Added example config file
* Rename project from nooCloudSpawner to libcloudSpawner
* Correct a config bug for notebookargs and forceuser
* Ajout du test http
* Ajout des variables configurations pour forcer le user et les args
* Retrait mauvaises dépendences
* First working version
* Version based on nooAPI